--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Dice Columbus</title>
+    <link rel="stylesheet" href="./css.css">
   </head>
   <body>
     <div id="app"></div>
