--- a/static/index.html
+++ b/static/index.html
@@ -2,10 +2,34 @@
 <html>
   <head>
     <title>Dice Columbus</title>
+    <meta name="viewport" content="width=600">
     <link rel="stylesheet" href="./css.css">
   </head>
   <body>
+    <!-- App -->
     <div id="app"></div>
+    <section class="page-desc">
+      <h1>
+        <a href="https://twitter.com/search?q=%23%E3%82%B5%E3%82%A4%E3%82%B3%E3%83%AD%E3%82%B3%E3%83%AD%E3%83%B3%E3%83%96%E3%82%B9%E3%81%AE%E5%8D%B5&src=typd" target="_blank" class="twitter-link">#サイコロコロンブスの卵</a>
+      </h1>
+      <div class="page-tweet">
+        <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">サイコロコロンブスの卵のゲーム製作者はどんなやつだと思ったら、この動画を見てください。つまり、いつもこんなこと考えてるやつです。<br><br>４つの４で１～１００を作ろう (23:01) <a href="https://t.co/e4ijxtuPrN">https://t.co/e4ijxtuPrN</a> <a href="https://twitter.com/hashtag/sm27096518?src=hash">#sm27096518</a></p>&mdash; なるしす＠日本カービィボウル学会 (@kurodataro) <a href="https://twitter.com/kurodataro/status/853962211814907905">April 17, 2017</a></blockquote>
+        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
+    </section>
+    <div class="page-hist">
+      <section class="page-hist-sec">
+        <h1>更新履歴</h1>
+        <ul>
+          <li>2017/04/22　公開</li>
+        </ul>
+      </section>
+      <section class="page-hist-sec">
+        <h1>本ページについて</h1>
+        <p>ソースコード：<a href="https://github.com/uhyo/dice-columbus" target="_blank">uhyo/dice-columbus - Github</a></p>
+        <p>作成者：<a href="https://twitter.com/uhyo_" class="twitter-link" target="_blank">@uhyo_</a></p>
+      </section>
+    </div>
     <script src="./components.js"></script>
   </body>
 </html>
