--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="ja">
   <head>
+    <meta charset="UTF-8">
     <title>Dice Columbus</title>
     <meta name="viewport" content="width=600">
     <link rel="stylesheet" href="./css.css">
