--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title>Dice Columbus</title>
+    <title>#サイコロコロンブスの卵</title>
     <meta name="viewport" content="width=600">
     <link rel="stylesheet" href="./css.css">
   </head>
@@ -29,6 +29,7 @@
         <h1>本ページについて</h1>
         <p>ソースコード：<a href="https://github.com/uhyo/dice-columbus" target="_blank">uhyo/dice-columbus - Github</a></p>
         <p>作成者：<a href="https://twitter.com/uhyo_" class="twitter-link" target="_blank">@uhyo_</a></p>
+        <p>ウェブサイト：<a href="http://uhyohyo.net/">http://uhyohyo.net/</a></p>
       </section>
     </div>
     <script src="./components.js"></script>
